# ChangeLog for net-libs/libircclient
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libircclient/ChangeLog,v 1.22 2015/02/19 04:12:31 mr_bones_ Exp $

  19 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org>
  -files/libircclient-1.7-build.patch, -files/libircclient-1.7-include.patch,
  -files/libircclient-1.7-shared.patch, -files/libircclient-1.7-static.patch,
  -libircclient-1.7.ebuild:
  old

*libircclient-1.8 (05 Feb 2015)

  05 Feb 2015; Michael Sterrett <mr_bones_@gentoo.org>
  +files/libircclient-1.8-build.patch, +files/libircclient-1.8-include.patch,
  +files/libircclient-1.8-shared.patch, +files/libircclient-1.8-static.patch,
  +libircclient-1.8.ebuild:
  version bump

*libircclient-1.7 (13 Mar 2014)

  13 Mar 2014; Michael Sterrett <mr_bones_@gentoo.org>
  +files/libircclient-1.7-build.patch, +files/libircclient-1.7-include.patch,
  +files/libircclient-1.7-shared.patch, +files/libircclient-1.7-static.patch,
  +libircclient-1.7.ebuild, files/libircclient-1.6-build.patch,
  files/libircclient-1.6-include.patch, files/libircclient-1.6-shared.patch,
  files/libircclient-1.6-static.patch:
  version bump

  22 Feb 2014; Michael Sterrett <mr_bones_@gentoo.org>
  -libircclient-1.6-r1.ebuild:
  old

  22 Feb 2014; Agostino Sarubbo <ago@gentoo.org> libircclient-1.6-r2.ebuild:
  Stable for x86, wrt bug #498736

  06 Feb 2014; Chema Alonso <nimiux@gentoo.org> libircclient-1.6-r2.ebuild:
  Stable for amd64 wrt bug #498736

  02 Feb 2014; Agostino Sarubbo <ago@gentoo.org> libircclient-1.6-r2.ebuild:
  Stable for ppc, wrt bug #498736

  08 May 2013; Michael Sterrett <mr_bones_@gentoo.org>
  files/libircclient-1.6-include.patch, files/libircclient-1.6-static.patch:
  fix static patch (bug #469082)

*libircclient-1.6-r2 (08 May 2013)

  08 May 2013; Vicente Olivert Riera <vincent@gentoo.org>
  +files/libircclient-1.6-static.patch, +libircclient-1.6-r2.ebuild: