@@ -1,12 +1,13 @@
 DEFINED_PHASES=compile configure install prepare
-DEPEND=ssl? ( dev-libs/openssl ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
+DEPEND=ssl? ( dev-libs/openssl:0 ) !<sys-devel/gettext-0.18.1.1-r3 || ( >=sys-devel/automake-1.13:1.13 >=sys-devel/automake-1.15:1.15 ) >=sys-devel/autoconf-2.69 >=sys-devel/libtool-2.4
 DESCRIPTION=Small but powerful library implementing the client-server IRC protocol
 EAPI=5
 HOMEPAGE=http://www.ulduzsoft.com/libircclient/
 IUSE=doc ipv6 ssl static-libs threads
 KEYWORDS=~amd64 ~ppc ~x86
 LICENSE=LGPL-2+
+RDEPEND=ssl? ( dev-libs/openssl:0 )
 SLOT=0
 SRC_URI=mirror://sourceforge/libircclient/libircclient-1.8.tar.gz
 _eclasses_=autotools	8fc2dd333ef9346c906ffd9a523d8211	eutils	998e5931fb95b10a6a11ec796ada2759	libtool	52d0e17251d04645ffaa61bfdd858944	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	a3db8057ea0903a9ebea4e46aab28ff9
-_md5_=a10c6d6e8843224015a3a067b626b2fd
+_md5_=5d439f000ac78960d089ca5db43f718b
