@@ -9,6 +9,6 @@ AUX libircclient-1.8-static.patch 209 SHA256 69ae2cd1eaa37bf58ebd7b7b80cee83168c
 DIST libircclient-1.6.tar.gz 392788 SHA256 6c511923023398bcd7627cf3305054befacf6874203cb0de36bdbe658779e953 SHA512 94a68f27fcb12c918fa347d4ee44747e08e016245048c81f179b9a45081bd336c329e7185a3bc46deb28c9c77e1eff5dc53de7e723b1ed5ee2c1d3cc57ce0548 WHIRLPOOL f0958c14f923b97e38d230e3d9a27aa08ef9162c0749ef0defb7b107083b27f3458dc652944672cae76527258b788045dcc040d33f055df70a5cab8e16da9ca1
 DIST libircclient-1.8.tar.gz 291803 SHA256 2cf8523ac683588f2785b08159a2df3e4d15939ee655c0024aa86334149de8f6 SHA512 f19e4b55cf49091ab2c83ff3d5cace2252daad6bf23cb61b7677b9c6055fe8a8a7d891f6e1e5962481c836f47b7dcd35ef563c8807737ac81e3c4cee253cfc4a WHIRLPOOL 39550aa403445ca333aeeca2108c6a5e67cbf2eb1f53d313aa4e970f39b702f3862698a0ce7956ad0c93034d9b0f59313b695a7666910872eb9505dd2e895e1b
 EBUILD libircclient-1.6-r2.ebuild 1217 SHA256 7901ff98984da48c53955b00abedcdeb5e7f449e562f5b592f52fb0e91fa33e0 SHA512 3bc23ebe5e1a25b265dd69c3f59429bee41b319cd9525a91779b81f231e3def5430d64bcff5ced8073461dac20e554a07829556a0bf364fdc4cda1c1bf347b29 WHIRLPOOL 292ea80e4256d1e71f1639e142091ccec13d40db9ff6820c49e9be9185cb103ec8738743ac09efd1387278773952615dd6fa3c9d770db5782ce5402939ca5f5b
-EBUILD libircclient-1.8.ebuild 1229 SHA256 6b8b2a7b00a48439dfce6d45912970cb521297ff7871c7d9564e7ceb13747258 SHA512 3262c9fcf6abf0e4a1b59f19ca9852fb3dfa6a5334c9aff14100e5c94ea27252c1328adff57abebf681ffdd257c9cbcbd6056c4b0a7ecb862a76d04dd8c0379e WHIRLPOOL 7ef878dbee06a43c921f2d702c7ed218cff62fda4aa820813b450a8f251ce7cf17dc6fc07e883b47111af5d048262bd81ad9b734b3497b3321c88ae34e7628ff
-MISC ChangeLog 3930 SHA256 ea5ca81b2e76754905b464254da7a8c6569bfc91923f1b7cc8b8d5d3e7db1429 SHA512 79239750a2bec85653a49a4404f0c49cfe2ffc5c3fda6cbf1ec2fbe33e9b49990e7939a7c0fa2c65574a866d6ab174544ab23f79ffd1fcc6c704e263c1568746 WHIRLPOOL c7d69a1c5e8488269d8f3e4abd5bfccdc383f901ae0978f31d415e16ed6a739a17d57ce047b0bb378ad6dc2ea6259c4205c45df29579a08f9fc249af61e160c6
+EBUILD libircclient-1.8.ebuild 1249 SHA256 abdaa311a2fccf9e5ed8caac315a8110fb9308a7d3a40f925027206a37e6c0bc SHA512 0665266cf4872012339c80d03de67f5bebb3dd32ea5f1813b98dc92de6e735ff2974d8ffda7d7501eaaf97ec6cda6cd6c0ac8da251564d5fda0d09a5eae0f5a2 WHIRLPOOL 08a7ff439828636b369f902e1d04b58af900b505e1e5425c919cb2f8168a8a63bfd6854324d1ea4f8d47ce484d9bc0a6ef8a87a8133bfd87fddfb0d9dff791a5
+MISC ChangeLog 4051 SHA256 725a5873f66244aa5e139081c898f45b3778aacb140ea953027f9a52d4cf1b4a SHA512 b486ae877e2b7e2d72d80dec516cd015691bc462626e4c31375ef8a5dedadbdd11d78d1c0f5a85e4a573566f51c28d98ad4244812616ce4405faaad1e0fbe19d WHIRLPOOL 1429f639490e7c52473216b8a1c59855dffba2f0e5978b00c9125b40ce1ad376d54bb5bd45bcdf72baca74fc963ef9d826f8a7285aa53c72186b719395d26f3c
 MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
